--- a/index.html
+++ b/index.html
@@ -1,40 +1,407 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 
-		<title>reveal.js</title>
+    <title>JS - Beyond the basics</title>
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
+    <link rel="stylesheet" href="dist/reset.css" />
+    <link rel="stylesheet" href="dist/reveal.css" />
+    <link rel="stylesheet" href="dist/theme/seegno.css" id="theme" />
 
-		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+    <!-- Theme used for syntax highlighted code -->
+    <link
+      rel="stylesheet"
+      href="plugin/highlight/monokai.css"
+      id="highlight-theme"
+    />
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
-			Reveal.initialize({
-				hash: true,
+    <link rel="stylesheet" href="custom.css" />
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+        <section>
+          <section>
+            <h1>React</h1>
+            <h3>From zero to production</h3>
+          </section>
+          <section>
+            <ol>
+              <li class="fragment">JavaScript - Beyond the basics</li>
+              <li class="fragment">Getting started with React</li>
+              <li class="fragment">TBD</li>
+              <li class="fragment">TBD</li>
+            </ol>
+          </section>
+        </section>
 
-				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-			});
-		</script>
-	</body>
+        <section>
+          <section>
+            <p>Benjamim Sonntag</p>
+            <ul class="social-networks">
+              <li>
+                <a
+                  class="social-network-link"
+                  href="https://github.com/bsonntag"
+                  target="_blank"
+                >
+                  <svg
+                    width="40"
+                    xmlns="http://www.w3.org/2000/svg"
+                    version="1.1"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+                      fill="white"
+                      fill-rule="evenodd"
+                    />
+                  </svg>
+                  @bsonntag
+                </a>
+              </li>
+              <li>
+                <a
+                  class="social-network-link"
+                  href="https://twitter.com/benjamimsonntag"
+                  target="_blank"
+                >
+                  <svg
+                    width="40"
+                    xmlns="http://www.w3.org/2000/svg"
+                    version="1.1"
+                    viewBox="0 0 400 400"
+                  >
+                    <circle cx="200" cy="200" fill="#1da1f2" r="200" />
+                    <path
+                      d="M163.4,305.5c88.7,0,137.2-73.5,137.2-137.2c0-2.1,0-4.2-0.1-6.2c9.4-6.8,17.6-15.3,24.1-25 c-8.6,3.8-17.9,6.4-27.7,7.6c10-6,17.6-15.4,21.2-26.7c-9.3,5.5-19.6,9.5-30.6,11.7c-8.8-9.4-21.3-15.2-35.2-15.2 c-26.6,0-48.2,21.6-48.2,48.2c0,3.8,0.4,7.5,1.3,11c-40.1-2-75.6-21.2-99.4-50.4c-4.1,7.1-6.5,15.4-6.5,24.2 c0,16.7,8.5,31.5,21.5,40.1c-7.9-0.2-15.3-2.4-21.8-6c0,0.2,0,0.4,0,0.6c0,23.4,16.6,42.8,38.7,47.3c-4,1.1-8.3,1.7-12.7,1.7 c-3.1,0-6.1-0.3-9.1-0.9c6.1,19.2,23.9,33.1,45,33.5c-16.5,12.9-37.3,20.6-59.9,20.6c-3.9,0-7.7-0.2-11.5-0.7 C110.8,297.5,136.2,305.5,163.4,305.5"
+                      fill="white"
+                    />
+                  </svg>
+                  @benjamimsonntag
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <p>Engenharia Informática<br />Universidade do Minho</p>
+          </section>
+          <section>
+            <a href="https://seegno.com" target="_blank">
+              <svg
+                class="seegno-logo"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 140 32"
+              >
+                <path d="M48.9.5l-2.6 5h10.1v-5"></path>
+                <path d="M43.8 10.5l-2.5 5.1h15v-5.1"></path>
+                <path d="M38.8 20.6l-2.5 5.1h20.1v-5.1"></path>
+                <path
+                  d="M81.9 9.2l-3.6 3.5c-1.4-1.7-3.5-2.6-6.1-2.6-4.6 0-8 3.4-8 8.3 0 5.1 3.5 8.4 7.9 8.4 4.1 0 6.5-2 7.2-5.6h-6.4V17h11.6c.1.5.1.9.1 1.4 0 7.6-5.2 13-12.3 13-7 0-13.2-4.9-13.2-13.1 0-7.6 5.6-13.1 13.3-13.1 4 .2 7.3 1.6 9.5 4"
+                ></path>
+                <path
+                  d="M105.6 31.1L92.1 14.2v16.9H87V5.8h4.7l13.6 16.9V5.8h5.1v25.3"
+                ></path>
+                <path
+                  d="M118.3 18.4c0 4.9 3.4 8.3 8 8.3 4.7 0 8-3.4 8-8.3s-3.3-8.3-8-8.3c-4.7.1-8 3.4-8 8.3m21.2 0c0 7.6-5.5 13.1-13.3 13.1-7.8 0-13.2-5.5-13.2-13.1 0-7.5 5.5-13.1 13.2-13.1 7.8.1 13.3 5.6 13.3 13.1"
+                ></path>
+                <path
+                  d="M13.2 16.2l-1.4-.2c-1.5-.2-2.7-.5-3.6-.9-.6-.3-1-.6-1.3-1-.2-.3-.3-.6-.3-1 0-1.3.9-2.2 2.4-2.7.6-.2 1.3-.3 2-.3h.4c2.8 0 5.2.9 7.2 2.1L21 8.1c-2.5-1.5-4.7-2.3-7.3-2.5-.6-.1-1.2-.1-1.8-.1h-.6c-5.4 0-10.1 2.7-10.1 8 0 2.6 1.1 4.4 2.8 5.5.4.3.9.5 1.4.8 1 .4 2.2.8 3.4 1l1.6.3c3.5.6 5.4 1.2 5.4 3 0 1.9-2.1 3-5 3-3.3 0-6.2-1.3-8-2.7L.4 28.6c2.7 2.1 6.7 3.2 10.4 3.2 5.4 0 10.3-2.7 10.3-8.2.2-4.7-3.4-6.7-7.9-7.4"
+                ></path>
+                <path
+                  d="M28.6 20.2H39l2.3-4.6H28.6v-5.4H44l2.3-4.7H23.6v25.3h10.1l2.6-5.1h-7.7"
+                ></path>
+              </svg>
+            </a>
+            <p>Lead frontend engineer</p>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>JavaScript<br />-<br />Beyond the basics</h2>
+          </section>
+          <section>
+            <h3>The Web without JS</h3>
+            <ul>
+              <li class="fragment">No interactions</li>
+              <li class="fragment">Static display of information</li>
+              <li class="fragment">
+                Dynamic content must be handled by the server
+              </li>
+            </ul>
+          </section>
+          <section>
+            <img src="images/index-html-request.png" class="r-stretch" />
+          </section>
+          <section>
+            <h3>The Web with JS</h3>
+            <ul>
+              <li class="fragment">Rich interactions</li>
+              <li class="fragment">
+                Content can be requested by the browsers and displayed
+                dinamically
+              </li>
+            </ul>
+          </section>
+          <section>
+            <img src="images/products-data-request.png" class="r-stretch" />
+          </section>
+          <section>
+            <ol>
+              <li class="fragment">JS in the browser</li>
+              <li class="fragment">The DOM</li>
+              <li class="fragment">Functions and closures</li>
+              <li class="fragment">Promises</li>
+              <li class="fragment">ES6</li>
+              <li class="fragment">Modules</li>
+            </ol>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h3>JS in the browser</h3>
+          </section>
+          <section>
+            <h4>The browser console</h4>
+            <p>
+              Windows & Linux: <code>F12</code> or <code>Control+Shift+I</code>
+            </p>
+            <p>macOS: <code>Command+Option+I</code></p>
+          </section>
+          <section>
+            <h4>Adding JS to your website</h4>
+            <pre
+              style="display: inline-block; width: initial; font-size: 1.5em"
+            ><code data-trim data-noescape>&lt;script&gt;</code></pre>
+          </section>
+          <section>
+            <code>index.html</code>
+            <pre><code data-trim data-noescape data-line-numbers="4-6">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+	&lt;script&gt;
+		console.log('Hello, world!');
+	&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+	&lt;h1&gt;My website&lt;/h1&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+						</code></pre>
+            <a
+              href="https://codesandbox.io/s/cesium-example-1-y34zu?file=/index.html"
+              target="_blank"
+              >Live example</a
+            >
+          </section>
+          <section>
+            <code>index.html</code>
+            <pre><code class="html" data-trim data-noescape data-line-numbers="4">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+	&lt;script src="script.js"&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+	&lt;h1&gt;My website&lt;/h1&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+						</code></pre>
+            <code>script.js</code>
+            <pre><code class="js" data-trim data-noescape>
+console.log('Hello, world!');
+						</code></pre>
+            <a
+              href="https://codesandbox.io/s/cesium-example-2-y6d71?file=/index.html"
+              target="_blank"
+              >Live example</a
+            >
+          </section>
+          <section>
+            <h4>Script loading strategies</h4>
+            <ul>
+              <li>At end of <code>&lt;body&gt;</code></li>
+              <li><code>&lt;script defer&gt;</code></li>
+              <li><code>&lt;script async&gt;</code></li>
+            </ul>
+          </section>
+          <section>
+            <h5>At end of <code>&lt;body&gt;</code></h5>
+            <ol>
+              <li>HTML content is parsed and displayed</li>
+              <li>Script is requested</li>
+              <li>Script is executed</li>
+            </ol>
+            <pre><code class="html" data-trim data-noescape data-line-numbers="7">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+&lt;/head&gt;
+&lt;body&gt;
+	&lt;h1&gt;My website&lt;/h1&gt;
+	&lt;script src="script.js"&gt;&lt;/script&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+						</code></pre>
+          </section>
+          <section>
+            <h5>Using <code>defer</code></h5>
+            <ol>
+              <li>
+                Script is requested <em>and</em><br />HTML content is parsed and
+                displayed
+              </li>
+              <li>Script is executed</li>
+            </ol>
+            <pre><code class="html" data-trim data-noescape data-line-numbers="4">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+	&lt;script src="script.js" defer&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+	&lt;h1&gt;My website&lt;/h1&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+						</code></pre>
+          </section>
+          <section>
+            <h5>Using <code>async</code></h5>
+            <p>
+              The script will not block HTML parsing and will be executed as
+              soon as possible
+            </p>
+            <pre><code class="html" data-trim data-noescape data-line-numbers="4">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+	&lt;script src="script.js" async&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+	&lt;h1&gt;My website&lt;/h1&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+						</code></pre>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h3>The DOM</h3>
+          </section>
+          <section>
+            <h4>Getting elements from the page</h4>
+            <ul>
+              <li><code>document.getElementById</code></li>
+              <li><code>document.getElementsByClassName</code></li>
+              <li><code>document.querySelector</code></li>
+              <li><code>document.querySelectorAll</code></li>
+            </ul>
+          </section>
+          <section>
+            <h5><code>getElementById</code></h5>
+            <div class="fragment">
+              <pre><code class="html" data-trim data-noescape>
+&lt;button id="my-button"&gt;Click this&lt;/button&gt;
+							</code></pre>
+            </div>
+            <div class="fragment">
+              <pre><code class="js" data-trim data-noescape>
+let button = document.getElementById('my-button');
+							</code></pre>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/API/Document/getElementById"
+                target="_blank"
+                >Documentation</a
+              >
+            </div>
+          </section>
+          <section>
+            <h4>Creating elements</h4>
+            <div class="fragment">
+              <pre><code class="js" data-trim data-noescape>
+let newDiv = document.createElement('div');
+						</code></pre>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/API/Document/createElement"
+                target="_blank"
+                >Documentation</a
+              >
+            </div>
+          </section>
+          <section>
+            <h4>Adding elements to the page</h4>
+            <div class="fragment">
+              <pre><code class="js" data-trim data-noescape>
+let container = document.getElementById('container');
+let newDiv = document.createElement('div');
+
+container.appendChild(newDiv);
+							</code></pre>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/API/Node/appendChild"
+                target="_blank"
+                >Documentation</a
+              >
+            </div>
+          </section>
+          <section>
+            <h4>Handling events</h4>
+            <div class="fragment">
+              <pre><code class="js" data-trim data-noescape data-line-numbers="3-5">
+let button = document.getElementById('my-button');
+
+button.addEventListener('click', event => {
+	console.log('button has been clicked!');
+});
+							</code></pre>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/API/Node/appendChild"
+                target="_blank"
+                >Documentation</a
+              >
+              <div class="fragment">
+                <a
+                  href="https://codesandbox.io/s/cesium-example-3-zk452?file=/index.html"
+                  target="_blank"
+                  >Example</a
+                >
+              </div>
+              <div class="fragment">
+                <a
+                  href="https://codesandbox.io/s/cesium-example-4-bx0fp?file=/index.html"
+                  target="_blank"
+                  >Another example</a
+                >
+              </div>
+            </div>
+          </section>
+        </section>
+      </div>
+    </div>
+
+    <script src="dist/reveal.js"></script>
+    <script src="plugin/notes/notes.js"></script>
+    <script src="plugin/markdown/markdown.js"></script>
+    <script src="plugin/highlight/highlight.js"></script>
+    <script>
+      // More info about initialization & config:
+      // - https://revealjs.com/initialization/
+      // - https://revealjs.com/config/
+      Reveal.initialize({
+        hash: true,
+
+        // Learn about plugins: https://revealjs.com/plugins/
+        plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
+      });
+    </script>
+  </body>
 </html>
