--- a/index.html
+++ b/index.html
@@ -318,56 +318,59 @@
             <h3>The Web without JS</h3>
             <ul>
               <li class="fragment">Static display of information</li>
-              <li class="fragment">No interactions</li>
               <li class="fragment">
                 Dynamic content must be handled by the server
               </li>
+              <li class="fragment">No interactions</li>
+              <li class="fragment">Limited funcionality</li>
             </ul>
 
             <aside class="notes">
-              Não sei se vocês sabem, mas a web começou apenas com HTML. Na
-              altura a web era usada pela comunidade científica como uma forma
-              de partilhar documentos, tais como teses e artigos científicos.
+              A web começou apenas com HTML. Na altura a web era usada pela
+              comunidade científica como uma forma de partilhar documentos, tais
+              como teses e artigos científicos.
               <br />
               Usando apenas HTML, apenas se consegue fazer páginas estáticas,
               que servem apenas para mostrar informação.
               <br />
-              Não é possível ter interações, como menus que abrem e fecham, nem
-              funcionalidades como drag & drop.
-              <br />
-              Além disso, tudo o que seja conteúdo dinâmico terá que ser tratado
+              Como tal, tudo o que seja conteúdo dinâmico terá que ser tratado
               no servidor.
               <br />
               Por exemplo, imaginem um site que mostra uma lista de produtos.
               Imaginem que essa lista é paginada, onde se mostram 10 produtos
               por página. Ao navegar entre páginas, todo o HTML terá que ser
               pedido outra vez.
+              <br />
+              Para além disso, não é possível ter interações, como menus que
+              abrem e fecham,
+              <br />
+              nem funcionalidades como drag & drop, geolocalização ou video
+              chamadas.
             </aside>
           </section>
           <section>
             <h3>The Web with JS</h3>
             <ul>
-              <li class="fragment">Rich interactions</li>
               <li class="fragment">
                 Content can be requested by the browsers and displayed
                 dinamically
               </li>
+              <li class="fragment">Rich interactions</li>
             </ul>
 
             <aside class="notes">
-              Com JavaScript conseguimos adicionar qualquer tipo de interação
-              aos nossos websites e aplicações web.
+              Com JavaScript tudo isto se torna possível na Web.
               <br />
-              É também possível pedir conteúdo dinâmico ao servidor e mostrá-lo
-              sem ter que pedir toda uma página de HTML.
+              Passa a ser possível pedir conteúdo dinâmico ao servidor e
+              mostrá-lo sem ter que pedir toda uma página de HTML.
               <br />
               Voltando ao exemplo da lista de produtos, com JavaScript é
               possível pedir apenas os dados da página que queremos, e
               substituir o conteúdo do HTML com os dados novos.
+              <br />
+              Conseguimos adicionar qualquer tipo de interação aos nossos
+              websites e aplicações web.
             </aside>
-          </section>
-          <section>
-            <img src="images/products-data-request.png" class="r-stretch" />
           </section>
           <section>
             <ol>
