--- a/index.html
+++ b/index.html
@@ -376,9 +376,10 @@
             <ol>
               <li class="fragment">JS in the browser</li>
               <li class="fragment">The DOM</li>
-              <li class="fragment">Functions and closures</li>
-              <li class="fragment">Promises</li>
-              <li class="fragment">ES6</li>
+              <li class="fragment">Functions and Scopes</li>
+              <li class="fragment">Promises and Async-await</li>
+              <li class="fragment">Destructuring, Rest and Spread</li>
+              <li class="fragment">ES6 and Babel</li>
               <li class="fragment">Modules</li>
             </ol>
           </section>
@@ -603,6 +604,279 @@ button.addEventListener('click', event => {
                 >
               </div>
             </div>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h3>Functions and scopes</h3>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h3>Promises and Async-await</h3>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h3>Destructuring, Rest and Spread</h3>
+          </section>
+          <section>
+            <h4>Destructuring assignment</h4>
+            <p>
+              Makes it possible to unpack values from arrays,<br />or properties
+              from objects, into distinct variables.
+            </p>
+            <small>
+              From
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment"
+                target="_blank"
+                >MDN</a
+              >
+            </small>
+
+            <aside class="notes">TODO</aside>
+          </section>
+          <section>
+            <h5>Array destructuring</h5>
+            <div class="r-stack">
+              <pre
+                class="fragment current-visible"
+              ><code class="js" data-trim data-noescape>
+let colors = ['red', 'green', 'blue'];
+
+let firstColor = colors[0];
+let secondColor = colors[1];
+
+console.log(firstColor); // red
+console.log(secondColor); // green
+              </code></pre>
+              <pre class="fragment"><code class="js" data-trim data-noescape>
+let colors = ['red', 'green', 'blue'];
+
+let [firstColor, secondColor] = colors;
+
+console.log(firstColor); // red
+console.log(secondColor); // green
+              </code></pre>
+            </div>
+          </section>
+          <section>
+            <h5>Object destructuring</h5>
+            <div class="r-stack">
+              <pre
+                class="fragment current-visible"
+              ><code class="js" data-trim data-noescape>
+let user = {
+  firstName: 'Benjamim',
+  lastName: 'Sonntag',
+  github: 'bsonntag'
+};
+
+let firstName = user.firstName;
+let lastName = user.lastName;
+
+console.log(firstName); // Benjamim
+console.log(lastName); // Sonntag
+              </code></pre>
+              <pre class="fragment"><code class="js" data-trim data-noescape>
+let user = {
+  firstName: 'Benjamim',
+  lastName: 'Sonntag',
+  github: 'bsonntag'
+};
+
+let { firstName, lastName } = user;
+
+console.log(firstName); // Benjamim
+console.log(lastName); // Sonntag
+              </code></pre>
+            </div>
+          </section>
+          <section>
+            <h5>Default values</h5>
+            <pre><code class="js" data-trim data-noescape data-line-numbers="1|3">
+let [firstColor = 'purple'] = colors;
+
+let { firstName = 'John' } = user;
+            </code></pre>
+          </section>
+          <section>
+            <h5>Assigning to a different name</h5>
+            <pre><code class="js" data-trim data-noescape>
+let { firstName: userName } = user;
+
+console.log(userName); // Benjamim
+            </code></pre>
+          </section>
+          <section>
+            <h5>Destructuring function results</h5>
+            <pre><code class="js" data-trim data-noescape data-line-numbers="1|3">
+let [firstUser, secondUser] = getAllUsers();
+
+let { github } = getMostActiveUser();
+            </code></pre>
+          </section>
+          <section>
+            <h5>Destructuring function arguments</h5>
+            <pre><code class="js" data-trim data-noescape>
+function getUserFullName({ firstName, lastName }) {
+  return firstName + ' ' + lastName;
+}
+            </code></pre>
+          </section>
+          <section>
+            <h5>Assigning the rest</h5>
+            <div class="r-stack">
+              <pre
+                class="fragment current-visible"
+              ><code class="js" data-trim data-noescape>
+let colors = ['red', 'green', 'blue'];
+
+let [firstColor, ...rest] = colors;
+
+console.log(firstColor); // red
+console.log(rest); // ['green', 'blue']
+              </code></pre>
+              <pre class="fragment"><code class="js" data-trim data-noescape>
+let user = {
+  firstName: 'Benjamim',
+  lastName: 'Sonntag',
+  github: 'bsonntag'
+};
+
+let { github, ...rest } = user;
+
+console.log(github); // bsonntag
+console.log(rest);
+// { firstName: 'Benjamim', lastName: 'Sonntag' }
+              </code></pre>
+            </div>
+          </section>
+          <section>
+            <h4>Function rest parameters</h4>
+            <pre><code class="js" data-trim data-noescape data-line-numbers="1,9">
+function sum(...values) {
+  let result = 0;
+  for (let value of values) {
+    result += value;
+  }
+  return result;
+}
+
+sum(2, 4, 8, 16);
+            </code></pre>
+          </section>
+          <section>
+            <h4>Spread operator</h4>
+            <ul>
+              <li>Expands arrays into other arrays or function arguments</li>
+              <li>Expands objects into other objects</li>
+            </ul>
+          </section>
+          <section>
+            <h5>Spreading arrays into other arrays</h5>
+            <div class="r-stack">
+              <pre
+                class="fragment current-visible"
+              ><code class="js" data-trim data-noescape>
+let colors = ['red', 'green', 'blue'];
+
+let moreColors = ['purple', 'yellow', ...colors];
+
+console.log(moreColors);
+// ['purple', 'yellow', 'red', 'green', 'blue']
+              </code></pre>
+              <pre class="fragment"><code class="js" data-trim data-noescape>
+let colors = ['red', 'green', 'blue'];
+
+let moreColors = ['purple', ...colors, 'yellow'];
+
+console.log(moreColors);
+// ['purple', 'red', 'green', 'blue', 'yellow']
+              </code></pre>
+            </div>
+          </section>
+          <section>
+            <h5>Spreading arrays into function arguments</h5>
+            <pre><code class="js" data-trim data-noescape>
+let numbers = [2, 4, 8, 16];
+
+let max = Math.max(...numbers);
+
+console.log(max); // 16
+            </code></pre>
+          </section>
+          <section>
+            <h5>Spreading objects into objects</h5>
+            <div class="r-stack">
+              <pre
+                class="fragment current-visible"
+              ><code class="js" data-trim data-noescape>
+let user = { name: 'Benjamim Sonntag', role: 'user' };
+
+let superUser = {
+  ...user,
+  role: 'admin'
+};
+
+console.log(superUser);
+// { name: 'Benjamim Sonntag', role: 'admin' }
+              </code></pre>
+              <pre class="fragment"><code class="js" data-trim data-noescape>
+let user = { name: 'Benjamim Sonntag', role: 'user' };
+
+let superUser = {
+  role: 'admin',
+  ...user // user.role will overwrite the role. ⚠️
+};
+
+console.log(superUser);
+// { name: 'Benjamim Sonntag', role: 'user' } ⚠️
+              </code></pre>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h3>ES.Next and Babel</h3>
+          </section>
+          <section>
+            <h4>New JavaScript Releases</h4>
+            <p class="fragment">
+              Since 2015, new versions of JavaScript are released every year.
+            </p>
+            <p class="fragment">
+              Last release was ECMAScript 2020, released in June 2020
+            </p>
+          </section>
+          <section>
+            <h4>Babel</h4>
+            <p>
+              A tool that converts ECMAScript 2015+ code into a backwards
+              compatible version of JavaScript.
+            </p>
+            <a href="https://babeljs.io/" target="_blank">Documentation</a>
+          </section>
+          <section>
+            <h5>Configuration</h5>
+            <code>.babelrc</code>
+            <pre><code class="json" data-trim data-noescape>
+{
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
+}
+            </code></pre>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h3>Modules</h3>
           </section>
         </section>
       </div>
